classDiagram
    class Patient {
        -id: int
        -nom: string
        -prenom: string
        -dateNaissance: date
        -adresse: string
        -telephone: string
        -email: string
    }
    class DossierMedical {
        -id: int
        -dateCreation: date
    }
    class Document {
        -id: int
        -type: string
        -dateCreation: date
        -fichier: blob
    }
    class Facture {
        -id: int
        -date: date
        -montant: float
        -statut: string
    }
    class Soin {
        -id: int
        -code: string
        -description: string
        -prix: float
    }
    class Dent {
        -id: int
        -code: string
        -position: string
    }
    class RendezVous {
        -id: int
        -date: datetime
        -duree: int
    }
    class SalleConsultation {
        -id: int
        -numero: string
        -capacite: int
    }
    class Machine {
        -id: int
        -nom: string
        -modele: string
        -dateAchat: date
    }
    class ProduitConsommable {
        -id: int
        -nom: string
        -quantite: int
        -seuil: int
    }
    class Utilisateur {
        -id: int
        -nom: string
        -prenom: string
        -email: string
        -motDePasse: string
    }
    class Role {
        -id: int
        -nom: string
    }
    class SoinEffectue {
        -id: int
        -date: date
        -commentaire: string
    }

    Patient "1" -- "1" DossierMedical
    DossierMedical "1" -- "*" Document
    Patient "1" -- "*" Facture
    Patient "1" -- "*" RendezVous
    RendezVous "1" -- "1" SalleConsultation
    RendezVous "*" -- "1" Utilisateur
    SoinEffectue "*" -- "1" Soin
    SoinEffectue "*" -- "1" Dent
    SoinEffectue "*" -- "1" RendezVous
    Machine "*" -- "*" SalleConsultation
    ProduitConsommable "*" -- "*" Soin
    Utilisateur "*" -- "1..*" Role
    DossierMedical "1" -- "*" SoinEffectue